fixed footer displaying off center

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -4,9 +4,7 @@
     padding: 3% 0 3% 0; 
     background: #3d3d3d;
     color: white;
-    /* padding-left: 170px; */
-    padding-left:10%;
-}
+    padding-left:10%}
 
 .location {
     margin-left: 50px;
@@ -17,7 +15,7 @@
 }
 
 @media only screen and (max-width: 560px) {
-    div.three.wide.column.location.section {
+    div.five.wide.column.location.section {
         margin-left: 0 auto;
         text-align: center !important;
     }
